fixed sidebar button (only visible on small screens). Tweaked sizing and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,10 +122,10 @@ input[type=text]:not(.browser-default) {
 #map, #placeholdermap, #itineraryItems, #directions, #streetview {
     height: 73vh;
     width: 100%;
-    overflow: auto;
+    overflow: scroll;
 }
 
-.material-icons {
+.tab > a > .material-icons {
     color: #8bc34a;
 }
 
@@ -221,6 +221,34 @@ input[type=text]:not(.browser-default) {
     animation: anima4 2s ease infinite;
   }
 
+@media only screen and (min-width: 992px) {
+  main {
+    margin-left: 300px;
+  }
+  .page-footer {
+    margin-left: 300px;
+  }
+  .footer-copyright {
+    position: absolute;
+    right: 2rem;
+    bottom: 1.2rem;
+  }
+  .sidenav-trigger {
+    display: none;
+  }
+}
+
+.sidenav-trigger > .material-icons {
+  font-size: 3rem;
+  margin: 1rem 0 0 1rem;
+  color: #33691e;
+}
+
 .fab { /*fontawesome icons (github in footer) */
     font-size: 3rem;
+    margin: 0 1.5rem 0 1.5rem;
+}
+
+.footer-copyright {
+  color: #9e9e9e !important;  
 }
